fix auth issues and add  jwt refresh tokens with redis
